<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:theme="@style/Theme.MainProject.login"
    android:background="@color/main_background"
    >

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/inventory"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/usernameText"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:hint="Enter username"
        android:paddingStart="5dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:id="@+id/passwordText"
        android:background="@color/white"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:paddingStart="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/error_text"
        android:text="@string/try_again"
        android:textColor="@color/red"
        android:visibility="gone"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:text="@string/log_in"
        android:onClick="login"
        app:backgroundTint="@color/header"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_an_account"
        android:layout_marginTop="100dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_button"
        android:text="@string/create_one"
        android:onClick="createAccount"
        app:backgroundTint="@color/header"
        />



</LinearLayout>